*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.19 ===
* Optimized work with atoms.

=== 1.0.18 ===
* Updated module versions in dependencies.

=== 1.0.17 ===
* Updated module versions in dependencies.

=== 1.0.16 ===
* Added 'zero' property to tk::GraphAxis to associate the position of origin on
  the axis with some value.
* Updated module versions in dependencies.

=== 1.0.15 ===
* Updated module versions in dependencies.

=== 1.0.14 ===
* Improved code base by using PVS Studio static code analyzer.
* Fixed several issues reported by PVS Studio static analyzer.
* Added tk::Menu::showmp method to show menu at current mouse cursor's position
  as a window transient for specified widget.
* Updated module versions in dependencies.

=== 1.0.13 ===
* Several fixes and optimizations related to tk::LedMeterChannel and tk::LedMeter.
* Fixed bug in tk::TabControl widget destruction.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.12 ===
* Added 'Editable' property to tk::Knob widget.
* Optimized window move operation (does not require realize if window size did
  not change).
* Implemented graph line segment widget.
* Added meter feature to knob.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.11 ===
* Updated module versions in dependencies.

=== 1.0.10 ===
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.9 ===
* Updated module versions in dependencies.

=== 1.0.8 ===
* Fixed invalid tk::TF_VERTICAL tether flag value.
* Added possibility to hide check/radio box for unchecked tk::MenuItem objects.
* Added SLOT_BEGIN_EDIT and SLOT_END_EDIT slot events.
* Fixed improper value calculation in cycling knob when clicking on the knob's scale.