@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2021 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2021 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 1 июн. 2021 г.
@@ -21,6 +21,7 @@
 
 #include <lsp-plug.in/tk/tk.h>
 #include <lsp-plug.in/common/debug.h>
+#include <lsp-plug.in/stdlib/locale.h>
 
 namespace lsp
 {
@@ -58,6 +59,7 @@ namespace lsp
             LSPString s;
             if (vAtoms[P_VALUE] >= 0)
             {
+                SET_LOCALE_SCOPED(LC_NUMERIC, "C");
                 if (s.fmt_ascii("%.4f %.4f", nAlign, nScale))
                     pStyle->set_string(vAtoms[P_VALUE], &s);
             }
