@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 12 авг. 2020 г.
@@ -20,6 +20,7 @@
  */
 
 #include <lsp-plug.in/tk/tk.h>
+#include <lsp-plug.in/stdlib/locale.h>
 
 namespace lsp
 {
@@ -61,6 +62,7 @@ namespace lsp
                     LSPString s;
                     if (vAtoms[P_VALUE] >= 0)
                     {
+                        SET_LOCALE_SCOPED(LC_NUMERIC, "C");
                         if (s.fmt_ascii("%.4f %.4f", hFit, vFit))
                             pStyle->set_string(vAtoms[P_VALUE], &s);
                     }
