@@ -4,6 +4,8 @@
 
 === 1.0.19 ===
 * Optimized work with atoms.
+* Many code updates that could cause potential problems related to using another
+  decimal point for floating-point number formatting.
 
 === 1.0.18 ===
 * Updated module versions in dependencies.
